--- a/main.html
+++ b/main.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
   <body>
+	 <h3 id="url">https://localhost:8080/</h3> 
+	  <form>
+		  <label for="name">Name:</label>
+		  <br>
+		  <input id="name" type="text" name="name">
+		  <br>
+		  <br>
+		  <label for="year">Graduation year:</label>
+		  <br>
+		  <input id="year" type="number" name="year">
+		  <br>
+		  <br>
+		  <input id="button" type="submit" value="Submit">
+	  </form>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
