--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		  <input id="year" type="number" name="year">
 		  <br>
 		  <br>
-		  <input id="button" type="submit" value="Submit">
+		  <button id="button">Submit</button>
 	  </form>
     <script type="text/javascript" src="./script.js">
 </script>
